// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab canSwipe 1`] = `
<div
  class="zs-tabs zs-tabs--horizontal"
>
  <div
    class="zs-tabs__header"
  >
    <ul
      class="zs-tabs__tablist"
      role="tablist"
    >
      <li
        class="zs-tabs__tab zs-tabs__tab--active"
        role="tab"
      >
        选项卡1
      </li>
      <li
        class="zs-tabs__tab"
        role="tab"
      >
        选项卡2
      </li>
      <div
        class="zs-tabs__line"
        style="transform:translate3d(0%, 0px, 0px);-webkit-transform:translate3d(0%, 0px, 0px);-moz-transform:translate3d(0%, 0px, 0px);width:50%"
      />
    </ul>
  </div>
  <div
    class="zs-tabs__body"
  >
    <div
      class="zs-carousel zs-carousel--horizontal"
    >
      <div
        class="zs-carousel__items"
      >
        <div
          class="zs-carousel__item"
        >
          <div>
            试试点我左滑
          </div>
        </div>
        <div
          class="zs-carousel__item"
        >
          <div>
            试试点我右滑
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tab lineWidth is auto 1`] = `
<div
  className="zs-tabs zs-tabs--horizontal"
>
  <div
    className="zs-tabs__header"
  >
    <ul
      className="zs-tabs__tablist"
      role="tablist"
    >
      <li
        className="zs-tabs__tab zs-tabs__tab--active"
        key="0/.0"
        onClick={[Function]}
        role="tab"
      >
        选项卡1
      </li>
      <li
        className="zs-tabs__tab"
        key="1/.1"
        onClick={[Function]}
        role="tab"
      >
        选项卡2
      </li>
      <div
        className="zs-tabs__line"
        style={
          Object {
            "MozTransform": "translate3d(0%, 0px, 0px)",
            "WebkitTransform": "translate3d(0%, 0px, 0px)",
            "backgroundColor": "transparent",
            "transform": "translate3d(0%, 0px, 0px)",
            "width": "50%",
          }
        }
      >
        <span
          className="zs-tabs__line__inner"
          style={
            Object {
              "width": "auto",
            }
          }
        />
      </div>
    </ul>
  </div>
  <div
    className="zs-tabs__body"
  >
    <TabPanel
      key=".0"
      prefixCls="zs-tabs"
      selected={true}
      title="选项卡1"
    >
      <div>
        试试点我左滑
      </div>
    </TabPanel>
    <TabPanel
      key=".1"
      prefixCls="zs-tabs"
      selected={false}
      title="选项卡2"
    >
      <div>
        试试点我右滑
      </div>
    </TabPanel>
  </div>
</div>
`;

exports[`Tab lineWidth is auto 2`] = `
<div
  className="zs-tabs zs-tabs--horizontal"
>
  <div
    className="zs-tabs__header"
  >
    <ul
      className="zs-tabs__tablist"
      role="tablist"
    >
      <li
        className="zs-tabs__tab zs-tabs__tab--active"
        key="0/.0"
        onClick={[Function]}
        role="tab"
      >
        选项卡1
      </li>
      <li
        className="zs-tabs__tab"
        key="1/.1"
        onClick={[Function]}
        role="tab"
      >
        选项卡2
      </li>
      <div
        className="zs-tabs__line"
        style={
          Object {
            "MozTransform": "translate3d(0%, 0px, 0px)",
            "WebkitTransform": "translate3d(0%, 0px, 0px)",
            "backgroundColor": "transparent",
            "transform": "translate3d(0%, 0px, 0px)",
            "width": "50%",
          }
        }
      >
        <span
          className="zs-tabs__line__inner"
          style={
            Object {
              "width": 30,
            }
          }
        />
      </div>
    </ul>
  </div>
  <div
    className="zs-tabs__body"
  >
    <TabPanel
      key=".0"
      prefixCls="zs-tabs"
      selected={true}
      title="选项卡1"
    >
      <div>
        试试点我左滑
      </div>
    </TabPanel>
    <TabPanel
      key=".1"
      prefixCls="zs-tabs"
      selected={false}
      title="选项卡2"
    >
      <div>
        试试点我右滑
      </div>
    </TabPanel>
  </div>
</div>
`;

exports[`Tab renders correctly 1`] = `
<div
  class="zs-tabs zs-tabs--horizontal"
>
  <div
    class="zs-tabs__header"
  >
    <ul
      class="zs-tabs__tablist"
      role="tablist"
    >
      <li
        class="zs-tabs__tab zs-tabs__tab--active"
        role="tab"
      >
        选项卡1
      </li>
      <li
        class="zs-tabs__tab"
        role="tab"
      >
        选项卡2
      </li>
      <div
        class="zs-tabs__line"
        style="transform:translate3d(0%, 0px, 0px);-webkit-transform:translate3d(0%, 0px, 0px);-moz-transform:translate3d(0%, 0px, 0px);width:50%"
      />
    </ul>
  </div>
  <div
    class="zs-tabs__body"
  >
    <div
      class="zs-tabs__panel zs-tabs__panel--active"
      role="tabpanel"
    >
      <div>
        试试点我左滑
      </div>
    </div>
    <div
      class="zs-tabs__panel"
      role="tabpanel"
    >
      <div>
        试试点我右滑
      </div>
    </div>
  </div>
</div>
`;

exports[`Tab renders correctly vertical 1`] = `
<div
  class="zs-tabs zs-tabs--vertical"
>
  <div
    class="zs-tabs__header"
  >
    <ul
      class="zs-tabs__tablist"
      role="tablist"
    >
      <li
        class="zs-tabs__tab zs-tabs__tab--active"
        role="tab"
      >
        选项卡1
      </li>
      <li
        class="zs-tabs__tab"
        role="tab"
      >
        选项卡2
      </li>
      <div
        class="zs-tabs__line"
        style="transform:translate3d(0px, 0%, 0px);-webkit-transform:translate3d(0px, 0%, 0px);-moz-transform:translate3d(0px, 0%, 0px);height:50%"
      />
    </ul>
  </div>
  <div
    class="zs-tabs__body"
  >
    <div
      class="zs-tabs__panel zs-tabs__panel--active"
      role="tabpanel"
    >
      <div>
        试试点我左滑
      </div>
    </div>
    <div
      class="zs-tabs__panel"
      role="tabpanel"
    >
      <div>
        试试点我右滑
      </div>
    </div>
  </div>
</div>
`;
